k8s/agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent
  namespace: omni
  labels:
    app: agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent
  template:
    metadata:
      labels:
        app: agent
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: agent
        image:
        imagePullPolicy: Always
        ports:
        - containerPort: 7860
        readinessProbe:
          httpGet:
            path: /
            port: 7860
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 7860
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: agent
  namespace: omni
  labels:
    app: agent
spec:
  selector:
    app: agent
  ports:
  - port: 7860
    targetPort: 7860
    nodePort: 30786
  type: NodePort
